# document_epic_extract

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  plan.md  pyproject.toml
.codex/: mcp.example.json
.codex/agents/: doc-updater.md  implementer.md  planner.md  release-checker.md  reviewer.md
.github/: pull_request_template.md
adapters/: base.py
adapters/llm/: parsing.py  (+2 more)
api/: main.py
demo/: app.py  requirements.txt
docker/: api.Dockerfile  demo.Dockerfile  worker.Dockerfile
docs/: README.md  acta_consistencia_circuit_breaker_2026-04-05.md  adding_models.md  circuit_breaker_definition_of_done_2026-04-05.md  circuit_breaker_distribuido.md  circuit_breaker_hito1_2026-04-05.md  circuit_breaker_hito2_2026-04-05.md  circuit_breaker_hito3_2026-04-05.md  circuit_breaker_hito4_cierre_2026-04-05.md  contract_versioning.md  custom_prebuilts.md  demo_troubleshooting.md  editorial_review_2026q2.md  getting_started.md  handoff_circuit_breaker_2026-04-05.md  hito2_cierre_final_2026-04-05.md  hito2_cierre_operativo.md  hito3_checklist.md  hito3_final_audit.md  hito4_checklist.md  hito4_flan_colas_cierre_2026-04-05.md  hito5_checklist.md  hito6_checklist.md  hito7_checklist.md  hito7_cierre.md  hito7_distribution_decision.md  hito7_packaging_validation.md  hito7_r701_observability_log.md  hito7_risk_register.md  hitos_avances.md  local_worker_contract.md  milestone_decisions.md  ocr_live_evidence_2026-04-05.md  ocr_live_run_controlled_2026-04-05.md  openapi.md  plan_trabajo_prioridad_media.md  plantilla_corrida_live_ocr.md  public_release_stabilization.md  release_checklist.md  release_rc_0.1.1-rc1.md  (+3 more)
prebuilts/: bank_statement.yaml  customs_declaration.yaml  id_card.yaml  invoice.yaml  receipt.yaml
registry/: models.yaml
scripts/: check_circuit_breaker_consistency.py  collect_ocr_live_evidence.py  generate_openapi_signature.py  r701_final_cut.py  r701_observation_run.sh  r701_sync_snapshot.py  release_readiness.sh  run_ocr_live_controlled.py  testpypi_publish_gate.sh
tests/: conftest.py
(+65 files in other folders)
